Idea 1: start with a list then stagger relative/absolute positioning

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
- 
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
@@ -97,7 +97,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+  ul {
+    list-style-type: none;
+  }
 
 
 
@@ -192,7 +194,7 @@ textarea {
   clear: both;
 }
 
- 
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
@@ -210,7 +212,7 @@ textarea {
     /* Style adjustments for high resolution devices */
 }
 
- 
+
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
@@ -286,5 +288,3 @@ textarea {
         page-break-after: avoid;
     }
 }
-
-
