--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ textarea {
  /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+   /*LANDING PAGE*/
   img{
 
   }
@@ -106,7 +107,7 @@ textarea {
     padding-top: 100px;
     padding-bottom: 100px;
   }
-
+  
   #who{
     padding-left: 35px;
   }
